# eventLogger

./: CMakeLists.txt  README.md  build.sh
src/: createEvent.c  enum.h  eventLog.h  input.h  main.c  saveBuffer.c
src/dynamicEventBuffer/: createEventDyn.c  dynBuffer.c  dynBuffer.h  dynBufferProc.c  dynSaveBuffer.c  eventBuffer.h
src/dynamic_event_buffer/: dyn_buffer.c  dyn_buffer.h
src/dynamic_event_buffer/dynamic_func/: dyn_create_event.c  dyn_create_event.h  dyn_find_event.c  dyn_find_event.h  dyn_peek_event.c  dyn_peek_event.h  dyn_pop_event.c  dyn_pop_event.h  dyn_save_buffer.c  dyn_save_buffer.h
src/staticEventBuffer/: createEvent.c  saveBuffer.c  staticBuffer.c  staticBuffer.h  staticBufferProc.c
src/static_event_buffer/: createEvent.c  saveBuffer.c  staticBuffer.c
